--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "from numpy.polynomial.polynomial import polyfit\n",
+    "\n",
+    "# Fit with polyfit function to get c(intercept) and m(slope)\n",
+    "# the degree parameter = 1 to models this as a straight line\n",
+    "c, m = polyfit(x, y, 1)\n",
+    "\n",
+    "# Plot the data points and line calculated from ployfit\n",
+    "plt.plot(x, y, 'o')\n",
+    "plt.plot(x, c + (m * x), '-')\n",
+    "plt.xticks(x)\n",
+    "\n",
+    "plt.show()\n",
+    "print(c, m)"
    ]
   },
   {
